<resources>
    <string name="app_name" translatable="false">Fyreplace</string>
    <string name="app_name_original" translatable="false">WildFyre</string>
    <string name="file_provider_authority" translatable="false">app.fyreplace.client.provider</string>
    <string name="api_base_url" translatable="false">https://api.wildfyre.net</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="main_nav_fragment_login">Login</string>
    <string name="main_nav_fragment_home">Home</string>
    <string name="main_nav_fragment_notifications">Notifications</string>
    <string name="main_nav_fragment_archive">Archive</string>
    <string name="main_nav_fragment_own_posts">My posts</string>
    <string name="main_nav_fragment_drafts">Drafts</string>
    <string name="main_nav_settings">Settings</string>
    <string name="main_nav_settings_theme_selector">Theme</string>
    <string name="main_nav_settings_theme_automatic">Auto</string>
    <string name="main_nav_settings_theme_light">Light</string>
    <string name="main_nav_settings_theme_dark">Dark</string>
    <string name="main_nav_settings_badge_toggle">Notification badge</string>
    <string name="main_nav_fyreplace_website">Website</string>
    <string name="main_nav_fyreplace_website_link" translatable="false">https://github.com/fyreplace</string>
    <string name="main_nav_fyreplace_open_source">Open source</string>
    <string name="main_nav_fyreplace_open_source_link" translatable="false">https://github.com/fyreplace/fyreplace-client-android</string>
    <string name="main_nav_fyreplace_logout">Logout</string>
    <string name="main_nav_fyreplace_licenses">Licenses</string>
    <string name="main_nav_fyreplace_licenses_dialog_title">Licenses of libraries used</string>
    <string name="main_nav_wildfyre_website">Website</string>
    <string name="main_nav_wildfyre_website_link" translatable="false">https://wildfyre.net</string>
    <string name="main_nav_wildfyre_open_source">Open source</string>
    <string name="main_nav_wildfyre_open_source_link" translatable="false">https://phabricator.wildfyre.net</string>
    <string name="main_nav_wildfyre_faq">FAQ</string>
    <string name="main_nav_wildfyre_faq_link" translatable="false">https://wildfyre.net#home-faq</string>
    <string name="main_nav_wildfyre_terms">Terms and conditions</string>
    <string name="main_nav_wildfyre_terms_link" translatable="false">https://wildfyre.net/pages/terms-of-service</string>
    <string name="main_nav_wildfyre_privacy">Privacy policy</string>
    <string name="main_nav_wildfyre_privacy_link" translatable="false">https://wildfyre.net/pages/privacy-policy</string>
    <string name="main_profile_editor_bio">Profile bio</string>
    <string name="main_author_anonymous">Anonymous</string>
    <string name="image_selector_chooser">Image source</string>
    <string name="image_selector_error_toast">Image file too large</string>
    <string name="area_selecting_action_area_selector">Area: %1$s</string>
    <string name="area_selecting_action_area_spread">Spread</string>
    <string name="area_selecting_action_area_reputation">Reputation</string>
    <string name="sharing_action_share">Share</string>
    <string name="deletion_action_delete">Delete</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_register_link" translatable="false">https://client.wildfyre.net/register</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_failure_login">Login failed</string>
    <string name="items_author_anonymous">Anonymous</string>
    <string name="notifications_action_clear">Clear</string>
    <string name="notifications_action_clear_dialog_title">Clear all notifications?</string>
    <string name="notifications_empty">No notifications</string>
    <plurals name="notifications_item_comment_count">
        <item quantity="one">%1$d comment</item>
        <item quantity="other">%1$d comments</item>
    </plurals>
    <string name="posts_action_delete_dialog_title">Delete these items? This action cannot be undone</string>
    <plurals name="posts_action_mode_selection_title">
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <string name="archive_empty">No archived posts from this area</string>
    <string name="own_posts_empty">No posts in this area</string>
    <string name="drafts_action_create">Create</string>
    <string name="drafts_empty">No drafts in this area</string>
    <string name="drafts_created_text">Write your post here</string>
    <string name="post_action_subscribe">Subscribe</string>
    <string name="post_action_unsubscribe">Unsubscribe</string>
    <string name="post_action_share_title">Share post</string>
    <string name="post_action_delete_dialog_title">Delete this post? This action cannot be undone</string>
    <string name="post_extinguish">Extinguish</string>
    <string name="post_ignite">Ignite</string>
    <string name="post_comments_empty">No comments</string>
    <plurals name="post_comment_count">
        <item quantity="one">%1$d comment</item>
        <item quantity="other">%1$d comments</item>
    </plurals>
    <string name="post_comment_author">Author</string>
    <string name="post_comment_new_comment">Add a comment</string>
    <string name="post_comment_attach_file_dialog_title">Attach…</string>
    <string name="post_comment_attach_file_dialog_negative">Photo</string>
    <string name="post_comment_attach_file_dialog_positive">File</string>
    <string name="post_comment_attach_file_dialog_neutral">Nothing</string>
    <string name="post_comment_menu_copy">Copy</string>
    <string name="post_comment_menu_share">Share</string>
    <string name="post_comment_menu_delete">Delete</string>
    <string name="post_comment_copy_label">Comment</string>
    <string name="post_comment_copy_toast">Comment copied to clipboard</string>
    <string name="post_comment_share_title">Share this comment</string>
    <string name="post_comment_delete_dialog_title">Delete this comment? This action cannot be undone</string>
    <string name="home_empty">No posts left in this area</string>
    <string name="draft_action_preview">Preview</string>
    <string name="draft_action_publish">Publish</string>
    <string name="draft_action_publish_dialog_title">Publish as…</string>
    <string name="draft_action_publish_dialog_negative">Anonymous</string>
    <string name="draft_action_publish_dialog_positive">Myself</string>
    <string name="draft_action_publish_toast">Post published!</string>
    <string name="draft_action_save">Save</string>
    <string name="draft_action_save_toast">Draft saved successfully</string>
    <string name="draft_action_save_empty_toast">Posts cannot be empty</string>
    <string name="draft_action_delete">Delete</string>
    <string name="draft_action_delete_dialog_title">Delete this draft?</string>
    <string name="draft_bottom_actions_selection_bold"><b>Bold</b></string>
    <string name="draft_bottom_actions_selection_italic"><i>Italic</i></string>
    <string name="draft_bottom_actions_selection_strikethrough"><strike>Strike-through</strike></string>
    <string name="draft_bottom_actions_selection_code"><tt>Code</tt></string>
    <string name="draft_bottom_actions_selection_link"><u><font color="#E64A19">Link</font></u></string>
    <string name="draft_bottom_actions_selection_link_dialog_title">Add a link</string>
    <string name="draft_bottom_actions_title">Title</string>
    <string name="draft_bottom_actions_title_dialog_title">Title level</string>
    <string name="draft_bottom_actions_list_bulleted">Bulleted list</string>
    <string name="draft_bottom_actions_list_numbered">Numbered list</string>
    <string name="draft_bottom_actions_main_image">Main image</string>
    <string name="draft_bottom_actions_main_image_dialog_title">Main image:</string>
    <string name="draft_bottom_actions_images">Images</string>
    <string name="draft_bottom_actions_images_dialog_title">Additional images:</string>
    <string name="draft_bottom_actions_images_dialog_file">File</string>
    <string name="draft_bottom_actions_images_dialog_photo">Photo</string>
    <string name="draft_bottom_actions_images_dialog_remove">Remove</string>
    <string name="draft_bottom_actions_youtube">Youtube video</string>
    <string name="draft_bottom_actions_youtube_dialog_title">Add a YouTube link</string>
    <string name="draft_bottom_actions_youtube_toast">This is not a YouTube link</string>
    <string name="draft_bottom_app_bar_title">Tools</string>
    <string name="draft_back_dialog_title">Save changes?</string>
    <string name="draft_link_dialog_hint">Paste the link here</string>
    <string name="draft_hint_toast">Draft created in current area (%1$s)</string>
    <string name="user_action_share_title">Share user profile</string>
    <string name="image_desc_profile_editor_change_image">Select an image</string>
    <string name="image_desc_profile_editor_change_photo">Take a picture</string>
    <string name="image_desc_user_picture">Profile picture</string>
    <string name="image_desc_author_picture">Author picture</string>
    <string name="image_desc_post_picture">Post picture</string>
    <string name="image_desc_comment_picture">Comment picture</string>
    <string name="image_desc_comments_toggle">Toggle comments</string>
    <string name="image_desc_comments_send_comment">Send comment</string>
    <string name="image_desc_comments_attach_file">Attach a file</string>
    <string-array name="dependencies_names_base">
        <item>JetBrains - Kotlin - Apache 2.0</item>
        <item>JetBrains - KotlinX - Apache 2.0</item>
        <item>Google - AndroidX - Apache 2.0</item>
        <item>Google - Material Components - Apache 2.0</item>
        <item>Google - GSON - Apache 2.0</item>
        <item>Bumptech - Glide - BSD 2-clause</item>
        <item>Square - Retrofit - Apache 2.0</item>
        <item>InsertKoin - Koin - Apache 2.0</item>
        <item>Noties - Markwon - Apache 2.0</item>
    </string-array>
    <string-array name="dependencies_links_base">
        <item>https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt</item>
        <item>https://github.com/Kotlin/kotlinx.coroutines/blob/master/LICENSE.txt</item>
        <item>https://android.googlesource.com/platform/frameworks/support/+/refs/heads/androidx-master-dev/LICENSE.txt</item>
        <item>https://github.com/material-components/material-components-android/blob/master/LICENSE</item>
        <item>https://github.com/google/gson/blob/master/LICENSE</item>
        <item>https://github.com/bumptech/glide/blob/master/LICENSE</item>
        <item>https://github.com/square/retrofit/blob/master/LICENSE.txt</item>
        <item>https://github.com/InsertKoinIO/koin/blob/master/LICENSE</item>
        <item>https://github.com/noties/Markwon/blob/master/LICENSE</item>
    </string-array>
</resources>
