<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_title"
        android:icon="@drawable/ic_title"
        android:title="@string/draft_bottom_actions_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_list_bulleted"
        android:icon="@drawable/ic_format_list_bulleted"
        android:title="@string/draft_bottom_actions_list_bulleted"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_list_numbered"
        android:icon="@drawable/ic_format_list_numbered"
        android:title="@string/draft_bottom_actions_list_numbered"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_main_image"
        android:icon="@drawable/ic_image"
        android:title="@string/draft_bottom_actions_main_image"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_images"
        android:icon="@drawable/ic_photo_library"
        android:title="@string/draft_bottom_actions_images"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_youtube"
        android:icon="@drawable/ic_play_circle_filled"
        android:title="@string/draft_bottom_actions_youtube"
        app:showAsAction="always" />
</menu>
