<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/fragment_home">
    <fragment
        android:id="@+id/fragment_login"
        android:name="net.wildfyre.client.ui.fragments.LoginFragment"
        android:label="@string/main_nav_fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_fragment_login_to_fragment_home"
            app:destination="@id/fragment_home"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in_reverse"
            app:popExitAnim="@anim/slide_out_reverse"
            app:popUpTo="@+id/fragment_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragment_home"
        android:name="net.wildfyre.client.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/fragment_notifications"
        android:name="net.wildfyre.client.ui.fragments.NotificationsFragment"
        android:label="@string/main_nav_fragment_notifications"
        tools:layout="@layout/fragment_items_list" />
    <fragment
        android:id="@+id/fragment_archive"
        android:name="net.wildfyre.client.ui.fragments.ArchiveFragment"
        android:label="@string/main_nav_fragment_archive"
        tools:layout="@layout/fragment_items_list" />
    <fragment
        android:id="@+id/fragment_own_posts"
        android:name="net.wildfyre.client.ui.fragments.OwnPostsFragment"
        android:label="@string/main_nav_fragment_own_posts"
        tools:layout="@layout/fragment_items_list" />
    <fragment
        android:id="@+id/fragment_post"
        android:name="net.wildfyre.client.ui.fragments.PostFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_post">
        <argument
            android:name="areaName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="postId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="selectedCommentId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="newCommentsIds"
            android:defaultValue="@null"
            app:argType="long[]"
            app:nullable="true" />
        <deepLink app:uri="client.wildfyre.net/areas/{areaName}/{postId}" />
        <deepLink app:uri="client.wildfyre.net/areas/{areaName}/{postId}/{selectedCommentId}" />
    </fragment>
    <fragment
        android:id="@+id/fragment_user"
        android:name="net.wildfyre.client.ui.fragments.UserFragment"
        android:label="@string/app_name">
        <argument
            android:name="author"
            android:defaultValue="@null"
            app:argType="net.wildfyre.client.data.models.Author"
            app:nullable="true" />
        <argument
            android:name="userId"
            android:defaultValue="-1L"
            app:argType="long" />
        <deepLink app:uri="client.wildfyre.net/user/{userId}" />
    </fragment>
    <action
        android:id="@+id/action_global_fragment_login"
        app:destination="@id/fragment_login"
        app:enterAnim="@anim/slide_in_reverse"
        app:exitAnim="@anim/slide_out_reverse"
        app:popEnterAnim="@anim/slide_in"
        app:popExitAnim="@anim/slide_out"
        app:popUpTo="@+id/fragment_home"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_global_fragment_login_startup"
        app:destination="@id/fragment_login"
        app:popEnterAnim="@anim/slide_in"
        app:popExitAnim="@anim/slide_out"
        app:popUpTo="@+id/fragment_home"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_global_fragment_post"
        app:destination="@id/fragment_post"
        app:enterAnim="@anim/slide_in"
        app:exitAnim="@anim/slide_out"
        app:popEnterAnim="@anim/slide_in_reverse"
        app:popExitAnim="@anim/slide_out_reverse" />
    <action
        android:id="@+id/action_global_fragment_user"
        app:destination="@id/fragment_user"
        app:enterAnim="@anim/slide_in"
        app:exitAnim="@anim/slide_out"
        app:popEnterAnim="@anim/slide_in_reverse"
        app:popExitAnim="@anim/slide_out_reverse" />
</navigation>
