<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="net.wildfyre.client.viewmodels.LoginFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_horizontal_medium"
            android:paddingTop="@dimen/margin_vertical_medium"
            android:paddingRight="@dimen/margin_horizontal_medium"
            android:paddingBottom="@dimen/margin_vertical_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_medium"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_splash_screen_foreground"
                android:tint="@color/loginLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/login_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={model.username}"
                    tools:ignore="UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/login_password"
                    android:imeActionLabel="@string/login_login"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={model.password}"
                    tools:ignore="UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                style="@style/AppTheme.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/margin_vertical_medium"
                android:enabled="@{safeUnbox(model.usernameValid) &amp;&amp; safeUnbox(model.passwordValid)}"
                android:text="@string/login_login"
                android:textStyle="bold" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/margin_vertical_medium"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</layout>